--- a/systock-api/src/main/resources/application.properties
+++ b/systock-api/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=POSTGRESQL
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://localhost:5432/systock
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
