--- a/systock-app/package.json
+++ b/systock-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.1",
     "@auth0/angular-jwt": "^4.0.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.18",
     "jquery": "^3.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -31,9 +32,9 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
