--- a/systock-app/package.json
+++ b/systock-app/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^9.1.0",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
@@ -20,9 +21,15 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@auth0/angular-jwt": "^4.0.0",
+    "@fullcalendar/core": "^5.11.3",
     "bootstrap": "^4.3.1",
     "bootstrap-select": "^1.13.18",
+    "chart.js": "^3.9.1",
     "jquery": "^3.5.0",
+    "lodash": "^4.17.21",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.1.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
