--- a/systock-app/package.json
+++ b/systock-app/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
@@ -24,9 +25,14 @@
     "@fullcalendar/core": "^5.11.3",
     "bootstrap": "^4.3.1",
     "bootstrap-select": "^1.13.18",
+    "cep-promise": "^4.2.0",
     "chart.js": "^3.9.1",
+    "cpf-cnpj-validator": "^1.0.3",
+    "inputmask": "^5.0.7",
     "jquery": "^3.5.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "ngx-mask": "^9.1.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.1.3",
     "quill": "^1.3.7",
